--- a/index.html
+++ b/index.html
@@ -5,13 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+      :root {
+        --accent: #0d6efd; /* bootstrap primary */
+        --bg-start: #f8fafc;
+        --bg-end: #eef2ff;
+      }
+
+      html,
+      body {
+        font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial;
+        background: linear-gradient(180deg, var(--bg-start), var(--bg-end));
+        color: #222;
+      }
+
+      /* space so fixed-top nav doesn't cover content */
+      body {
+        padding-top: 70px;
+      }
+
+      /* section headings */
+      h2.text-primary {
+        text-transform: capitalize;
+        font-weight: 700;
+        margin-bottom: 1rem;
+      }
+
+      /* cards: equal heights handled by Bootstrap h-100; add subtle hover */
+      .card {
+        border: 0;
+        border-radius: 12px;
+        transition: transform 0.18s ease, box-shadow 0.18s ease;
+      }
+      .card:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 12px 30px rgba(13, 16, 40, 0.08);
+      }
+
+      /* images in project cards */
+      .card-img-top {
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
+        height: 160px;
+        object-fit: cover;
+      }
+
+      /* buttons */
+      .btn-primary {
+        border-radius: 8px;
+        padding: 0.5rem 0.9rem;
+        font-weight: 600;
+      }
+
+      /* offcanvas title */
+      .offcanvas-header h5 {
+        font-weight: 700;
+      }
+
+      /* footer */
+      footer {
+        margin-top: 3rem;
+        padding: 2rem 0;
+        text-align: center;
+        color: #6b7280;
+      }
+
+      /* responsive tweak: reduce card width on small screens */
+      @media (max-width: 575.98px) {
+        .card[style] {
+          width: 100% !important;
+        }
+      }
+    </style>
+
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
   </head>
   <body>
+    <!-- hero/intro -->
+    <section class="py-5">
+      <div class="container text-center">
+        <!-- <img src="static/images/default-user.png" alt="" /> -->
+        <h1 class="display-5 fw-bold">Hi, I'm Elizabeth Mudibo</h1>
+        <p class="lead text-muted">Software developer • Web • AI • Mobile</p>
+        <a class="btn btn-primary btn-lg" href="#projects">View Projects</a>
+      </div>
+    </section>
+
     <!-- navbar -->
-    <nav class="navbar bg-primary navbar-expand-lg navbar-light">
-      <div class="container-fluid">
+    <nav class="navbar bg-primary navbar-expand-lg navbar-dark fixed-top">
+      <div class="container">
         <!-- brand name -->
-        <!-- <a class="navbar-brand text-dark" href="#">PORTFOLIO</a> -->
+        <!-- <a class="navbar-brand fw-bold text-white" href="#">PORTFOLIO</a> -->
 
         <!-- Toggler button - triggers OFFCANVAS on small screens -->
         <button
@@ -27,19 +122,19 @@
         <div class="collapse navbar-collapse d-none d-lg-block">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link text-dark">Home</a>
+              <a href="#" class="nav-link text-white">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link text-dark">About</a>
+              <a href="#about" class="nav-link text-white">About</a>
             </li>
             <li class="nav-item">
-              <a href="#skills" class="nav-link text-dark">Skills</a>
+              <a href="#skills" class="nav-link text-white">Skills</a>
             </li>
             <li class="nav-item">
-              <a href="#projects" class="nav-link text-dark">Projects</a>
+              <a href="#projects" class="nav-link text-white">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="#contact" class="nav-link text-dark">Contact</a>
+              <a href="#contact" class="nav-link text-white">Contact</a>
             </li>
           </ul>
         </div>
@@ -61,18 +156,20 @@
 
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
               <li class="nav-item">
-                <a href="#about" class="nav-link">About</a>
+                <a href="#" class="nav-link text-dark">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#about" class="nav-link text-dark">About</a>
               </li>
               <li class="nav-item">
-                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#skills" class="nav-link text-dark">Skills</a>
               </li>
               <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="#projects" class="nav-link text-dark">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a href="#contact" class="nav-link text-dark">Contact</a>
               </li>
             </ul>
           </div>
@@ -139,20 +236,20 @@
       <div class="row">
         <!-- 1st column -->
         <!-- div class="card shadow h-100" -->
-        <div class="col-md-3">
+        <div class="col-md-3 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 15rem">
+          <div class="card h-100 shadow w-100">
             <!-- <img
               src="static/images/food-app.png"
               class="card-img-top"
               alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Languages</h5>
               <p class="card-text">
                 Java, Python, C/C++/C#, SQL, JavaScript/TypeScript, HTML/CSS
               </p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
               <!-- <button
                 class="btn btn-primary"
                 data-bs-toggle="modal"
@@ -165,55 +262,55 @@
         </div>
 
         <!-- 2nd column -->
-        <div class="col-md-3">
+        <div class="col-md-3 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 15rem">
+          <div class="card h-100 shadow w-100">
             <!-- <img
               src="static/images/medical-app.png"
               class="card-img-top"
               alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Frameworks</h5>
               <p class="card-text">React, Node.js, Flask, Bootstrap</p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
             </div>
           </div>
         </div>
 
         <!-- 3rd column -->
-        <div class="col-md-3">
+        <div class="col-md-3 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 15rem">
+          <div class="card h-100 shadow w-100">
             <!-- <img
               src="static/images/game-app.png"
               class="card-img-top"
               alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Developer Tools</h5>
               <p class="card-text">
                 VS Code, Visual Studio, PyCharm, Jupyter Notebook, IntelliJ,
                 NetBeans
               </p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
             </div>
           </div>
         </div>
 
         <!-- 4th column -->
-        <div class="col-md-3">
+        <div class="col-md-3 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 15rem">
+          <div class="card h-100 shadow w-100">
             <!-- <img
               src="static/images/game-app.png"
               class="card-img-top"
               alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Libraries</h5>
               <p class="card-text">Pandas, NumPy, Matplotlib</p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
             </div>
           </div>
         </div>
@@ -234,21 +331,21 @@
       <div class="row">
         <!-- 1st column -->
         <!-- div class="card" shadow h-100 -->
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 20rem">
+          <div class="card h-100 shadow w-100">
             <img
               src="static/images/food-app.png"
               class="card-img-top"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Food Delivery System</h5>
               <p class="card-text">
                 Developed a full-stack application with secure authentication
                 and order management.
               </p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
               <!-- <button
                 class="btn btn-primary"
                 data-bs-toggle="modal"
@@ -261,21 +358,21 @@
         </div>
 
         <!-- 2nd column -->
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 20rem">
+          <div class="card h-100 shadow w-100">
             <img
               src="static/images/medical-app.png"
               class="card-img-top"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Telehealth System</h5>
               <p class="card-text">
                 Designed and implemented an appointment scheduling and patient
                 management system.
               </p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
             </div>
           </div>
         </div>
@@ -304,21 +401,21 @@
         <!-- </div> -->
 
         <!-- 4th column -->
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex">
           <!-- card -->
-          <div class="card h-100 shadow" style="width: 20rem">
+          <div class="card h-100 shadow w-100" style="width: 20rem">
             <img
               src="static/images/game-app.png"
               class="card-img-top"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Mobile Game Development</h5>
               <p class="card-text">
                 Created an interactive mobile game in Unity to explore user
                 engagement and design principles
               </p>
-              <!-- <a href="#" class="btn btn-primary">learn more</a> -->
+              <!-- <a href="#" class="btn btn-primary mt-auto align-self-start">learn more</a> -->
             </div>
           </div>
         </div>
@@ -385,6 +482,61 @@
       </div>
     </div>
 
-    <script src="static/js/bootstrap.min.js"></script>
+    <!-- footer -->
+    <footer class="bg-primary text-center text-white">
+      <div class="container">
+        <div class="row">
+          <!-- column 1 -->
+          <div class="col-md-4">
+            <!-- company info -->
+            <!-- <h5 class="fw-bold">grok technologies</h5>
+            <p>we are a software company building solutions</p> -->
+          </div>
+
+          <!-- column 2 -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">quick links</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#" class="text-white text-decoration-none">Home</a>
+              </li>
+              <li>
+                <a href="#about" class="text-white text-decoration-none"
+                  >About</a
+                >
+              </li>
+              <li>
+                <a href="#skills" class="text-white text-decoration-none"
+                  >Skills</a
+                >
+              </li>
+              <li>
+                <a href="#contact" class="text-white text-decoration-none"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- column 3 -->
+          <div class="col-md-4">
+            <h5 class="fw-bold">social links</h5>
+            <a href="" class="text-white"
+              ><i class="bi bi-linkedin fs-4"></i
+            ></a>
+            <a href="https://github.com/Elizarrrr" class="text-white"
+              ><i class="bi bi-github fs-4"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center p-3">
+        <p>&copy; 2025 Elizabeth Mudibo</p>
+      </div>
+    </footer>
+
+    <!-- <script src="static/js/bootstrap.min.js"></script> -->
+    <script src="static/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
